@@ -1,24 +1,33 @@
 package com.audiora.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 public class CorsConfig {
 
+    @Value("${app.frontendBaseUrl}")
+    private String frontendBaseUrl;
+
     @Bean
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
-    // Allow both localhost and 127.0.0.1 for local dev (Spotify dashboard sometimes prefers 127.0.0.1)
-    config.setAllowedOrigins(List.of(
-        "http://localhost:4200",
-        "http://127.0.0.1:4200"
-    ));
+
+        // Allow both localhost and production frontend URL
+        List<String> allowedOrigins = Arrays.asList(
+            "http://localhost:4200",
+            "http://127.0.0.1:4200",
+            frontendBaseUrl
+        );
+
+        config.setAllowedOrigins(allowedOrigins);
         config.setAllowedMethods(List.of("GET","POST","PUT","DELETE","OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
